fixed spacing so sidenav doesn't cover

--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,11 @@ select {
 .major-img {
     display: none;
 }
+
 .resources {
-    margin-left: 320px;
     margin-top: 10px;
 }
+
 .purple-block {
     background-color: #4b2e83;
     opacity: 92%;
@@ -240,11 +241,6 @@ select {
     h5 {
         font-size: 1.7rem;
     }
-    
-    main {
-        margin-left: 40px;
-        margin-right: 40px;
-    }
 
     main p, li {
         font-size: 1.6rem;
@@ -264,7 +260,7 @@ select {
 
     .big-img {
         display: block;
-        width: 50%;
+        width: 70%;
         height: auto;
         margin-left: auto;
         margin-right: auto;
